data/derived/fa15/progs/unify/prog3122.ml.out
Characters 113-125:
  let seen' = (if (List.mem h) then seen else h::seen) in
                  ^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
